--- a/index.css
+++ b/index.css
@@ -1,43 +1,163 @@
 * {
-  padding: 0px;
-  margin: 0px;
-  font-family: monospace;
-  color:green;
+margin:0px;
+padding:0px;
 }
 
 body {
-  width: 100%;
-  height: 100%;
-  background: white;
+background-color:rgb(2, 5, 34);
 }
 
-h2 {
-  text-align: center;
-  padding:20px;
+.menu1 {
+margin-left:25%;
 }
 
-p, a {
-  margin:0px auto;
-  padding: 10px;
-  max-width: 500px;
+
+header menu ul li a:hover {
+border-bottom:2px solid #444;
 }
 
-#days {
-  text-align: center;
+header menu ul li a:active {
+border-bottom:2px solid #444;
+}
+header menu ul li {
+list-style-type:none;
+display:inline;
+float:left;
 }
 
-li {
-  margin: 20px;
-  list-style: none;
+header menu ul li a {
+color:hsl(0,0%,10%);
+font-family:'Helvetica Neue', Verdana, sans-serif;
+font-weight:200;
+letter-spacing:1.5px;
+text-decoration:none;
+text-align:center;
+
+height:20px;
+width:70px;
+display:block;
+padding:9px;
 }
 
-ul li ul li, ul li ul li a {
-  color: rgb(1, 53, 1);
-  display:inline-block;
+.box {
+width:360px;
+outline:1px solid #fff;
+margin:20px;
+background:#fff;
+box-shadow:inset 2px 5px 25px hsl(0,0%,90%);
+
 }
 
-menu {
-  margin:20px auto;
-  float: none;
-  text-align: center;
+.box h1, h2 {
+font-family:'Helvetica Neue', sans-serif;
+font-weight: 200;
+font-size:100%;
+}
+
+.box p {
+font-family:'Helvetica Neue', sans-serif;
+font-weight: 200;
+font-size:90%;
+}
+
+.box menu {
+margin:20px;
+margin-top:0px;
+padding-top:0px;
+}
+
+.box menu ul li {
+list-style-type:none;
+display:inline;
+float:left;
+}
+
+.box menu ul li a {
+text-align: center;
+font-size:80%;
+padding:2.5px;
+}
+
+.box menu ul li a:hover {
+border-bottom:2px solid #111;
+}
+
+.box a {
+font-family:'Helvetica Neue', Verdana, sans-serif;
+font-weight:400;
+color: rgb(2, 5, 34);
+text-decoration:none;
+color:#111;
+}
+
+.box li p {
+    font-family:'Helvetica Neue', Verdana, sans-serif;
+    font-weight:400;
+    color: rgb(2, 5, 34);
+    text-decoration:none;
+    color:#111;
+    font-size: 80%;
+}
+
+.box h2 {
+text-align: left;
+padding: 25px;
+}
+
+.box .boxl {
+float:left;
+}
+
+.box .boxr {
+padding:10px;
+margin-top:20px;
+}
+
+.wrapper {
+max-width:1000px;
+margin:0px auto;
+margin-top:50px;
+display:grid;
+grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+}
+
+.left {
+float:left;
+width:400px;
+}
+
+
+.bio {
+min-height:120px;
+}
+
+
+.bio img {
+float:left;
+padding:10px;
+border-radius:25%;
+}
+
+
+.row1 {
+margin-bottom:15px;
+border-bottom:2px solid #ddd;
+}
+
+.row1:hover {
+border-bottom:2px solid #444;
+}
+
+.tags, .projects, .pinned {
+min-height:180px;
+}
+
+.pinned {
+    padding:20px 0px 20px 0px;
+}
+
+.feed {
+border:none;
+float:left;
+height:800px;
 }
