--- a/index.css
+++ b/index.css
@@ -64,6 +64,11 @@ header {
     margin-top:20px;
 }
 
+header .container {
+    width: 85%;
+    text-align: center;
+}
+
 .left {
     padding-right:20px;
 }
