--- a/index.css
+++ b/index.css
@@ -65,6 +65,7 @@ a:hover {
 .bookrating {
     white-space: nowrap;
 }
+
 .bookrating img{
     width:20px;
     height:auto;
@@ -112,3 +113,23 @@ header img {
     filter: sepia(0.15);
     margin-bottom: 20px;
 }
+
+/* Mobile */
+@media (max-width: 480px) { 
+    header {
+        margin-top: -30px;
+        height:100%;
+    }
+    header img {
+        width:80%;
+    }
+    h1 {
+        font-size: 280%;
+    }
+    h2 {
+        font-size: 180%;
+    }
+    li, p, a {
+        font-size: 120%;
+    }
+ }
