--- a/index.css
+++ b/index.css
@@ -43,10 +43,11 @@ p, li {
 }
 
 li {
+    padding-top: 2px;
     width:95%;
     display: flex;
     justify-content: space-between;
-    border-bottom: 1px solid #444;
+    border-bottom: 1px solid #999;
 }
 
 a {
