--- a/index.css
+++ b/index.css
@@ -13,7 +13,7 @@ ul {
 
 li {
     color:#444;
-    background:hsla(0,100%,100%,0.2);
+    background:#eee;
     min-height:30px;
     border-bottom: 1px solid #666;
     border-right: 1px solid #666;
@@ -22,16 +22,15 @@ li {
 }
 
 ul li:first-child {
-    background:pink;
-    color:rgb(255, 126, 6);
-    filter:sepia(80%);
+    background:#eee;
+    color:#444;
 }
 
 a {
     text-transform:uppercase;
-    color:rgb(255, 126, 6);
+    color:#444;
     text-decoration: none;
-    background:pink;
+    background:#ccc;
     letter-spacing:2px;
 }
 
@@ -65,10 +64,9 @@ li, li a {
 }
 
 .rating-filled {
-    filter: sepia(50%);
+    filter: grayscale(0.1);
 }
 
 .rating-unfilled {
-    filter: sepia(50%);
-    filter: grayscale(0.7);
+    filter: grayscale(1);
 }
