--- a/global.css
+++ b/global.css
@@ -1,5 +1,5 @@
 body {
-background-color:hsl(45, 60%, 80%);
+background-color:#fff;
 }
 
 h1 {
@@ -37,9 +37,9 @@ header {
 header a {
     padding:10px;
     text-transform:uppercase;
-    color:rgb(255, 126, 6);
+    color:#444;
     text-decoration: none;
-    background:pink;
+    background:#ccc;
     letter-spacing:2px;
 }
 
@@ -54,5 +54,5 @@ blockquote, pre {
 }
 
 code, blockquote, pre {
-    background-color:hsl(45, 60%, 90%);
+    background-color:#eee;
 }
