Remove goals/interests, minor style changes, add books

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,7 @@
 <header>
-    <h1>Johan Andersson</h1>
+    <a href="https://johan.fun">
+        Johan Andersson
+    </a>
     <p>5th year Computer Science student in Lund.</p>
     <div class="header-footer">
         <a href="mailto:johan-andersson01@protonmail.com">Send an email!</a>
