--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Johan Andersson</title>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="/global.css">
