--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header>
-    <a href="https://johan.fun">
+    <a href="/">
         Johan Andersson
     </a>
     <p>5th year Computer Science student in Lund.</p>
