--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@
 margin:0px;
 padding:0px;
 font-family: 'Helvetica', 'Arial', sans-serif;
-font-weight: lighter;
+font-weight: normal;
 list-style: none;
 }
 
@@ -12,7 +12,7 @@ ul {
 }
 
 li {
-    color:#839496;
+    color:#586e75;
     background:#eee8d5;
     min-height:30px;
     display:flex;
@@ -59,7 +59,7 @@ li a {
 .right {
     padding:10px;
     text-align: right;
-    color:#839496;
+    color:#586e75;
     text-transform:lowercase;
 }
 
