--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
     <a href="/">
         Johan Andersson
     </a>
-    <p>Software Engineer with an M.S. in Computer Science. Based in Lund</p>
+    <p>Software Developer at Modcam. M.S. in Computer Science. Based in Lund.</p>
     <div class="header-footer">
         <a href="mailto:johan-andersson01@protonmail.com">Send an email!</a>
     </div>
