Add migration notice

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,6 +3,7 @@
         Johan Andersson
     </a>
     <p>Software Engineer with an M.S. in Computer Science. Based in Lund</p>
+    <p>Notice: migration to <a href="skogsbrus.xyz">skogsbrus.xyz</a> in progress</p>
     <div class="header-footer">
         <a href="mailto:johan-andersson01@protonmail.com">Send an email!</a>
     </div>
